--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -49,7 +49,7 @@ Noisy channel principles provide a powerful framework for explaining how the hum
 
 Is children's language comprehension rooted in the same kind of flexible, expectation-based processing? Prior research on this topic is mixed. On the one hand, language comprehension in early childhood is rooted in pragmatic and social cues \cite{clark2009,carpenter1998}. And preschool children also show evidence of encoding stable features like the reliability of individual speakers \cite{koenig2004, harris2012}. But on the other hand, the same children sometimes show striking deficits in pragmatic reasoning about speakers' intentions \cite{noveck2001} and have trouble revising their first interpretation of syntactic ambiguities \cite{trueswell1999}. Our current experiments thus attempt to test whether young children flexibly integrate expectations about speakers with the noise on a communicative channel. 
 
-We created a paradigm that allowed us to manipulate both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and adult controls) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:training}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content. Critically, we manipulated the amount of acoustic noise in the recordings. We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments support the idea that children, as well as adults, show evidence of flexibly trading off between information sources in language comprehension.
+We created a paradigm that allowed us to manipulate both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:training}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content. We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments support the idea that children, as well as adults, show evidence of flexibly trading off between information sources in language comprehension.
 
 \section{Experiment 1}
 
