--- a/paper/noisy_kids.bib
+++ b/paper/noisy_kids.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Michael Frank at 2015-09-18 15:12:30 -0700 
+%% Created for Dan Yurovsky at 2015-09-22 08:36:29 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{neuman1983,
+	Author = {Neuman, A C and Hochberg, I},
+	Date-Added = {2015-09-21 18:13:15 +0000},
+	Date-Modified = {2015-09-21 18:13:16 +0000},
+	Journal = {The Journal of the Acoustical Society of {\ldots}},
+	Title = {{Children's perception of speech in reverberation}},
+	Year = {1983}}
 
 @article{noveck2001,
 	Author = {Noveck, Ira A},
